<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>decrypt-loader</groupId>
	<artifactId>decrypt-loader</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<log4j.version>1.2.17</log4j.version>
		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
		<exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
	</properties>

	<build>
		<plugins>
		 <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-compiler-plugin</artifactId>
	        <version>${maven-compiler-plugin.version}</version>
	        <configuration>
	          <source>${java.version}</source>
	          <target>${java.version}</target>
	        </configuration>
	      </plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>${exec-maven-plugin.version}</version>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>secret_project.SecretProjectStart</mainClass>
					<systemProperties>
						<systemProperty>
							<key>task</key>
							<value>${task}</value>
						</systemProperty>
						<systemProperty>
							<key>encryptionKey</key>
							<value>${encryptionKey}</value>
						</systemProperty>
						<systemProperty>
							<key>filePath</key>
							<value>${filePath}</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
	</dependencies>
</project>